# fastApi

./: .env.example  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt
crud/: users.py
routers/: users.py
test/: test_bookings.py
utils/: email.py  security.py
