[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]
